2006-08-26	kaffeetisch

	* Makefile.PL: Add Cairo to the pre-requisite hash if appropriate
	so that EU::MM generates a correct META.yml.

2006-08-20	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.133.

2006-08-20	kaffeetisch

	* Makefile.PL, README: Require Cairo 0.92 (still only if gtk+ >=
	2.8).

	* Gtk2.pm, README: Capitalize "perl" where it refers to the
	language.

2006-08-07	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.132.

2006-08-07	kaffeetisch

	* gtk2perl.h, t/GdkCairo.t, t/GdkDisplay.t, t/GdkPixmap.t,
	t/GdkScreen.t, t/GdkWindow.t, t/GtkAction.t, t/GtkAssistant.t,
	t/GtkButton.t, t/GtkCellRendererAccel.t, t/GtkCellRendererSpin.t,
	t/GtkClipboard.t, t/GtkComboBox.t, t/GtkDnd.t, t/GtkEntry.t,
	t/GtkFileChooserButton.t, t/GtkLabel.t, t/GtkLinkButton.t,
	t/GtkMessageDialog.t, t/GtkNotebook.t, t/GtkPageSetup.t,
	t/GtkPaperSize.t, t/GtkPrintContext.t, t/GtkPrintOperation.t,
	t/GtkPrintOperationPreview.t, t/GtkPrintSettings.t,
	t/GtkRadioAction.t, t/GtkRange.t, t/GtkScrolledWindow.t,
	t/GtkSelection.t, t/GtkSizeGroup.t, t/GtkStatusIcon.t,
	t/GtkStyle.t, t/GtkTextBuffer.t, t/GtkTextBufferRichText.t,
	t/GtkTreeStore.t, t/GtkTreeView.t, t/GtkWidget.t, t/PangoCairo.t,
	t/PangoFont.t, xs/GdkCairo.xs, xs/GdkDisplay.xs, xs/GdkPixmap.xs,
	xs/GdkScreen.xs, xs/GdkWindow.xs, xs/GtkAction.xs,
	xs/GtkClipboard.xs, xs/GtkComboBox.xs, xs/GtkDnd.xs,
	xs/GtkEntry.xs, xs/GtkFileChooserButton.xs,
	xs/GtkMessageDialog.xs, xs/GtkNotebook.xs, xs/GtkRadioAction.xs,
	xs/GtkRange.xs, xs/GtkScrolledWindow.xs, xs/GtkSelection.xs,
	xs/GtkSizeGroup.xs, xs/GtkStatusIcon.xs, xs/GtkStyle.xs,
	xs/GtkTextBuffer.xs, xs/GtkTreeModelFilter.xs, xs/GtkTreeStore.xs,
	xs/GtkTreeView.xs, xs/GtkWidget.xs, xs/GtkWindow.xs,
	xs/PangoCairo.xs, xs/PangoFont.xs: Change version checks to refer
	to stable releases only.

	* t/01.GtkWindow.t, t/GdkPixbuf.t: Make a few tests a bit more
	robust.

	* t/GdkDnd.t: Test Gtk2::Gdk::DragContext::status with an empty